Probably broken commit

--- a/larpmanager/templates/larpmanager/orga/ci/character_inventories.html
+++ b/larpmanager/templates/larpmanager/orga/ci/character_inventories.html
@@ -1,14 +1,8 @@
 {% extends "utils.html" %}
 {% load i18n %}
-
 {% block title %}
-    {% trans "Hello World" %}
+    {% trans "Character Inventories" %}
 {% endblock title %}
-
 {% block info %}
-    {% trans "This is a dummy page to verify wiring." %}
+    {% trans "This page shows all character inventories and allows staff to manage pools and ownership." %}
 {% endblock info %}
-
-{% block content %}
-    <h1>Hello World</h1>
-{% endblock content %}
