--- a/larpmanager/templates/larpmanager/orga/ci/ci_pool_types.html
+++ b/larpmanager/templates/larpmanager/orga/ci/ci_pool_types.html
@@ -1,14 +1,30 @@
 {% extends "utils.html" %}
 {% load i18n %}
-
 {% block title %}
-    {% trans "Hello World" %}
+    {% trans "Character Inventory Pool Types" %}
 {% endblock title %}
-
 {% block info %}
-    {% trans "This is a dummy page to verify wiring." %}
+    {% trans "This page summarizes the types of pools that a character inventory has" %}
 {% endblock info %}
-
 {% block content %}
-    <h1>Hello World</h1>
+    {% include "elements/header/orga.html" %}
+    <table id="pool_types" class="go_datatable writing">
+        <thead>
+            <tr>
+                <th></th>
+                <th>{% trans "Name" %}</th>
+                <th>{% trans "Pool" %}</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for el in list %}
+                <tr id="{{ el.id }}">
+                    <td>
+                        <a href="{% url 'orga_ci_pool_types_edit' run.event.slug run.number el.id %}"
+                           qtip="{% trans "Edit" %}"><i class="fas fa-edit"></i></a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock content %}
