--- a/larpmanager/templates/larpmanager/orga/ci/character_inventory.html
+++ b/larpmanager/templates/larpmanager/orga/ci/character_inventory.html
@@ -1,7 +1,7 @@
 {% extends "utils.html" %}
 {% load i18n %}
 {% block title %}
-    {% trans "Character Inventory Name Here" %}: {{ name }}
+    {% trans "Character Inventory" %}: {{ name }}
 {% endblock title %}
 {% block content %}
     <h2>{% trans "Currencies & Materials" %}</h2>
@@ -9,11 +9,45 @@
         <tr>
             <th>{% trans "Name" %}</th>
             <th>{% trans "Available" %}</th>
+            <th>{% trans "Transfer" %}</th>
+            <th>{% trans "Add" %}</th>
         </tr>
         {% for entry in pool_balances_list %}
         <tr>
             <td>{{ entry.type.name }}</td>
             <td>{{ entry.balance.amount }}</td>
+            <td>
+                <form method="post" action="{% url 'orga_ci_transfer' run.event.slug run.number %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="source_inventory" value="{{ character_inventory.id }}">
+                    <input type="hidden" name="pool_type" value="{{ entry.type.id }}">
+
+                    <input type="number" name="amount" min="1" max="{{ entry.balance.amount }}">
+
+                    <select name="target_inventory">
+                       <option value="">NPC</option>
+                        {% for inv in all_inventories %}
+                            {% if inv.id != character_inventory.id %}
+                                <option value="{{ inv.id }}">{{ inv.name }}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+
+                    <button type="submit">{% trans "Transfer" %}</button>
+                </form>
+            </td>
+            <td>
+                {% if request.user.is_staff %}
+                    <form method="post" action="{% url 'orga_ci_transfer' run.event.slug run.number %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="source_inventory" value="">  {# NPC = None #}
+                        <input type="hidden" name="target_inventory" value="{{ character_inventory.id }}">
+                        <input type="hidden" name="pool_type" value="{{ entry.type.id }}">
+                        <input type="number" name="amount" min="1" placeholder="Amount">
+                        <button type="submit">{% trans "Add from NPC" %}</button>
+                    </form>
+                {% endif %}
+            </td>
         </tr>
         {% endfor %}
     </table>
