Fixed character inventory name display

--- a/larpmanager/templates/larpmanager/orga/ci/character_inventory.html
+++ b/larpmanager/templates/larpmanager/orga/ci/character_inventory.html
@@ -1,7 +1,7 @@
 {% extends "utils.html" %}
 {% load i18n %}
 {% block title %}
-    {% trans "Character Inventory" %}: {{ name }}
+    {% trans "Character Inventory" %}: {{ character_inventory.name }}
 {% endblock title %}
 {% block content %}
     <h2>{% trans "Currencies & Materials" %}</h2>
