Can view a character's inventory on their character page

--- a/larpmanager/templates/larpmanager/event/character.html
+++ b/larpmanager/templates/larpmanager/event/character.html
@@ -39,6 +39,7 @@
                         {% include "elements/sheet/pdf.html" %}
                         {% if intro %}<div class="char_intro">{{ intro | safe }}</div>{% endif %}
                         {% include "elements/sheet/px.html" %}
+                        {% include "elements/sheet/character_inventories.html" %}
                         {% include "elements/sheet/factions.html" %}
                         {% include "elements/sheet/texts.html" with char=sheet_char %}
                         {% include "elements/sheet/plots.html" %}
