--- a/larpmanager/templates/larpmanager/orga/ci/character_inventory.html
+++ b/larpmanager/templates/larpmanager/orga/ci/character_inventory.html
@@ -22,7 +22,7 @@
                     <input type="hidden" name="source_inventory" value="{{ character_inventory.id }}">
                     <input type="hidden" name="pool_type" value="{{ entry.type.id }}">
 
-                    <div style="display: flex; gap: 0.2em; align-items: center;">
+                    <div style="display: flex; gap: 0.2em; align-items: center; text-align: center;">
                         <input type="number" name="amount" min="1" max="{{ entry.balance.amount }}" style="width: 3em; margin: 0; padding: 0.1em;">
                         <select name="target_inventory" style="width: auto; min-width: 4em; margin: 0; padding: 0.1em;">
                            <option value="">NPC</option>
@@ -35,19 +35,27 @@
                         <button type="submit" style="margin: 0; padding: 0.2em 0.4em;">Transfer</button>
                     </div>
 
-                    <input type="text" name="reason" placeholder="{% trans 'Reason' %}" style="margin: 0; padding: 0.1em; flex:1;">
+                    <div style="text-align: center;">
+                        <input type="text" name="reason" placeholder="{% trans 'Reason' %}" style="width: 90%; margin: 0 auto; padding: 0.1em;">
+                    </div>
                 </form>
             </td>
             <td>
                 {% if request.user.is_staff %}
-                    <form method="post" action="{% url 'orga_ci_transfer' run.event.slug run.number %}">
+                    <form method="post" action="{% url 'orga_ci_transfer' run.event.slug run.number %}" style="display: flex; flex-direction: column; gap: 0.2em;">
                         {% csrf_token %}
                         <input type="hidden" name="source_inventory" value="">  {# NPC = None #}
                         <input type="hidden" name="target_inventory" value="{{ character_inventory.id }}">
                         <input type="hidden" name="pool_type" value="{{ entry.type.id }}">
-                        <input type="number" name="amount" min="1" placeholder="Amount">
-                        <input type="text" name="reason" placeholder="{% trans 'Reason' %}" style="flex:1; min-width:8em; margin:0; padding:0.1em;">
-                        <button type="submit">{% trans "Add from NPC" %}</button>
+
+                        <div style="display: flex; gap: 0.2em; align-items: center; justify-content: center;">
+                            <input type="number" name="amount" min="1" placeholder="Amount" style="width: 4em; margin: 0; padding: 0.1em;">
+                            <button type="submit" style="margin: 0; padding: 0.2em 0.4em;">{% trans "Add from NPC" %}</button>
+                        </div>
+
+                        <div style="text-align: center;">
+                            <input type="text" name="reason" placeholder="{% trans 'Reason' %}" style="width: 90%; margin: 0 auto; padding: 0.1em;">
+                        </div>
                     </form>
                 {% endif %}
             </td>
