--- a/larpmanager/templates/larpmanager/orga/px/ability_templates.html
+++ b/larpmanager/templates/larpmanager/orga/px/ability_templates.html
@@ -7,7 +7,7 @@
     {% trans "This page summarizes the reusable ability templates that can be assigned to abilities" %}
 {% endblock info %}
 {% block content %}
-    {% include "elements/header/orga.html" %}
+    {% include "elements/header/edit.html" %}
     <table id="ability_templates" class="go_datatable writing">
         <thead>
             <tr>
