--- a/larpmanager/templates/larpmanager/orga/ci/character_inventories.html
+++ b/larpmanager/templates/larpmanager/orga/ci/character_inventories.html
@@ -7,7 +7,7 @@
     {% trans "This page summarizes the character inventories" %}
 {% endblock info %}
 {% block content %}
-    {% include "elements/header/orga.html" %}
+    {% include "elements/header/edit.html" %}
     <table id="pool_types" class="go_datatable writing">
         <thead>
             <tr>
