--- a/larpmanager/templates/larpmanager/orga/ci/character_inventory.html
+++ b/larpmanager/templates/larpmanager/orga/ci/character_inventory.html
@@ -41,7 +41,7 @@
                 </form>
             </td>
             <td>
-                {% if request.user.is_staff %}
+                {% if request.user.is_staff or can_add_to_inventories %}
                     <form method="post" action="{% url 'orga_ci_transfer' run.event.slug run.number %}" style="display: flex; flex-direction: column; gap: 0.2em;">
                         {% csrf_token %}
                         <input type="hidden" name="source_inventory" value="">  {# NPC = None #}
